Add product.Service description